--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ target/
 # pyenv
 .python-version
 
+env/
+
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
