--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/python,windows,visualstudiocode
+.vscode/launch.json
+.vscode/settings.json
